# veda-business-process-analysis

./: .gitignore  importmap.json  index.html  manifest  options.mjs  package.json
server/: Cargo.toml  business-process-analysis.toml
server/ontology/: bpa-ai-prompt.ttl  bpa-ai.ttl  bpa-document.ttl  bpa-pipeline-instances.ttl  bpa-pipeline.ttl  bpa-process-extraction.ttl  bpa-test-structured_schema.ttl  bpa-test.ttl
server/src/: ai_client.rs  business_process_handler.rs  cluster_optimizer.rs  clustering_common.rs  clustering_handler.rs  common.rs  document_status_handler.rs  generic_processing_handler.rs  main.rs  process_structured_schema.rs  prompt_manager.rs  queue_processor.rs  response_schema.rs  types.rs
server/src/extractors/: docx_extractor.rs  jpeg_extractor.rs  mod.rs  pdf_extractor.rs  types.rs  xlsx_extractor.rs
server/src/pipeline/: business_process_extraction.rs  extraction_partitioning.rs  mod.rs  process_extraction.rs  raw_document_extracting_and_structuring.rs
server/src/tests/response_schema/: mod.rs  schema_processing_test.rs  schema_validation_test.rs
server/src/tests/response_schema/fixtures/: expected_result.ttl  test_response.json  test_schema.json
src/: ServiceWorker.js  index.html  manifest  options.js
src/js/: App.js  Auth.js  AuthError.js  Breadcrumb.js  BusinessProcess.js  BusinessProcessCard.js  BusinessProcessList.js  BusinessProcessOverview.js  BusinessProcessView.js  Callback.js  ClusterCard.js  ClusterList.js  ClusterView.js  ClusterizationButton.js  DocumentEdit.js  DocumentFiltersForm.js  DocumentFiltersModal.js  Error.js  (+35 more)
(+11 files in other folders)
