[package]
name = "veda-bpa"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

version = "3.0.0"
git-version = "0.3.9"

config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openai_dive = "0.6"

tokio = "1.0"

#v_common = { package = "v-common", version = "=0.10.18", features = ["tokio-1"] }
v_common = { package = "v-common", path = "../../../v-common", features = ["tokio-1"]}
