[package]
name = "veda-bpa"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

version = "3.0.0"
git-version = "0.3.9"

config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
openai_dive = "0.6"

tokio = "1.0"

v_common = { package = "v-common", version = "=0.10.19", features = ["tokio_1", "tt_3", "awc_3"] }
#v_common = { package = "v-common", path = "../../v-common", features = ["tokio_1", "tt_3", "awc_3"]}

uuid = "0.8.2"
chrono = "0.4.38"
reqwest = "0.12.9"
humantime = "2.1.0"
